Watch History and Watchlist stored in mongodb